regression fix form wizard/pages formatting broken in BS 4/5

--- a/framework/core/assets/less/forms-bootstrap3.less
+++ b/framework/core/assets/less/forms-bootstrap3.less
@@ -304,3 +304,7 @@ input.tagit-hidden-field {
 .grecaptcha-badge {
     z-index: 60;
 }
+
+form.row {
+    width: min-content;
+}
