--- a/framework/core/assets/less/forms-bootstrap4.less
+++ b/framework/core/assets/less/forms-bootstrap4.less
@@ -292,3 +292,12 @@ input.tagit-hidden-field {
 .group-controls {
     margin: 0 12px 5px;
 }
+
+ul.stepy-header.row {
+    flex-wrap: nowrap;
+}
+
+fieldset {
+    margin-left: 24px;
+    width: 100%;
+}
