--- a/framework/core/assets/less/forms-bootstrap5.less
+++ b/framework/core/assets/less/forms-bootstrap5.less
@@ -320,3 +320,12 @@ input.tagit-hidden-field {
 .grecaptcha-badge {
     z-index: 60;
 }
+
+ul.stepy-header.row {
+    flex-wrap: nowrap;
+    width: min-content;
+}
+
+fieldset {
+    margin-left: 24px;
+}
